--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "typeorm migration:generate -n InitialData",
-    "migration:run": "npm run build && typeorm migration:run -d src/data-source.js"
+    "migration:run": "npm run build && typeorm migration:run -d dist/data-source.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
